# learning

./: README.md
c++/: CMakeLists.txt  setup.sh  strategy_pattern.cpp
c++/cmake/: PlantUML.cmake
c++/patterns/: CMakeLists.txt  repository.cpp  singleton.cpp  strategy_pattern.cpp  strategy_pattern.uml
c++/qt/: CMakeLists.txt  qml.cpp  widget.qml
